# Vault-X_CIH

./: BACKEND_ARCHITECTURE.md  COMPLIANCE_REPORT.md  HOW_TO_RUN.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TRACKER.md  PROJECT_DOCUMENTATION.md  docker-setup.md  index.html  indian_subcontinent_marine_zones (3).json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
backend/engine/: Cargo.toml
backend/engine/src/: main.rs
maritime-surveillance/engine/: .env  Cargo.toml
maritime-surveillance/engine/src/: main.rs  state.rs
maritime-surveillance/engine/src/alerts/: detector.rs
maritime-surveillance/engine/src/config/: settings.rs
maritime-surveillance/engine/src/detection/: fishing.rs
maritime-surveillance/engine/src/models/: alert.rs  mod.rs  packet.rs  vessel.rs  zone.rs
maritime-surveillance/engine/src/processor/: mod.rs  pipeline.rs  worker.rs
maritime-surveillance/engine/src/queue/: ringbuffer.rs
maritime-surveillance/engine/src/spatial/: bitmap.rs  geofence.rs  h3_grid.rs  mod.rs
maritime-surveillance/engine/src/storage/: postgres.rs
maritime-surveillance/engine/src/udp/: receiver.rs
maritime-surveillance/engine/src/utils/: logger.rs
maritime-surveillance/engine/src/ws/: server.rs
maritime-surveillance/engine/target_build/: .rustc_info.json
maritime-surveillance/engine/target_build/debug/.fingerprint/bytes-628872af4089c831/: lib-bytes  lib-bytes.json
maritime-surveillance/engine/target_build/debug/.fingerprint/cfg-if-bfd2cd4de4792f4d/: lib-cfg_if  lib-cfg_if.json
maritime-surveillance/engine/target_build/debug/.fingerprint/futures-core-33cec0c9813d2262/: lib-futures_core  lib-futures_core.json
maritime-surveillance/engine/target_build/debug/.fingerprint/itoa-7b657a5837ade1b5/: lib-itoa  lib-itoa.json
maritime-surveillance/engine/target_build/debug/.fingerprint/lock_api-df65500f95a86c0d/: lib-lock_api  lib-lock_api.json
maritime-surveillance/engine/target_build/debug/.fingerprint/log-e055345e84b0351e/: lib-log  lib-log.json
maritime-surveillance/engine/target_build/debug/.fingerprint/parking_lot_core-6fe6c781d3f40bce/: output-build-script-build-script-build
maritime-surveillance/engine/target_build/debug/.fingerprint/scopeguard-46027116085b1b41/: lib-scopeguard  (+1 more)
(+56 files in other folders)
