[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.30", features = ["full"] }
h3o = "0.10.0"
roaring = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres = { version = "0.19", features = ["with-serde_json-1"] }
crossbeam = "0.8"
geo = "0.27"
rstar = "0.11"
geojson = "0.24"
